# RentalBackendAPI

./: main.py  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/core/: bootstrap.py  container.py
app/modules/customers/application/: customer_service.py
app/modules/customers/application/services/: customer_service.py  customer_service_v2.py  customer_service_v3.py
app/modules/customers/domain/enums/: customer_status_enum.py
app/modules/customers/domain/exceptions/: customer_exceptions.py  customer_excpetions.py
app/modules/customers/domain/models/: customer.py
app/modules/customers/domain/repositories/: i_customer_repository.py
app/modules/customers/domain/services/: i_customer_service.py
app/modules/customers/domain/value_objects/: __init__.py  driver_license_id.py  phone_number.py
app/modules/customers/infrastructure/mappers/: customer_mapper.py
app/modules/customers/infrastructure/repositories/: customer_repository.py
app/modules/customers/infrastrucutre/mappers/: customer_mapper.py
app/modules/customers/infrastrucutre/repositories/: customer_repository.py  customer_repository_v2.py  customer_repository_v3.py
app/modules/customers/presentation/controllers/: customer_controller.py  cutomer_controller.py
app/modules/customers/presentation/dto/: __init__.py  create_customer_dto.py  update_customer_dto.py
app/modules/customers/presentation/response/: __init__.py  block_customer_response.py  create_customer_response.py  delete_customer_response.py  (+3 more)
database/: customers.json  rental_database.db  store_item.json  store_items.json
(+57 files in other folders)
