[project]
name = "rental-inventory-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (E301-E306: blank lines)
    "W",      # pycodestyle warnings (W291-W293: whitespace, W391: blank line at EOF)
    "F",      # pyflakes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"